adicionando o quinto parágrafo

--- a/arquivo1.html
+++ b/arquivo1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Ôªø<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -6,9 +6,10 @@
 </head>
 <body>
     <h1>Arquivo 1</h1>
-    <p>Primeiro par·grafo</p>
-    <p>Segundo par·grafo</p>
-    <p>Terceiro par·grafo</p>
-    <p>Quarto par·grafo</p>
+    <p>Primeiro par√°grafo</p>
+    <p>Segundo par√°grafo</p>
+    <p>Terceiro par√°grafo</p>
+    <p>Quarto par√°grafo</p>
+    <p>Quinto par√°grafo</p>
 </body>
 </html>
