--- a/arquivo1.html
+++ b/arquivo1.html
@@ -5,6 +5,12 @@
     <title>Arquivo 1</title>
 </head>
 <body>
+    <style>
+        p {
+            color: #0026ff
+        }
+    </style>
+
     <h1>Arquivo 1</h1>
     
     <p>Primeiro parágrafo</p>
