colorindo a primeira letra

--- a/arquivo1.html
+++ b/arquivo1.html
@@ -9,6 +9,9 @@
         p {
             color: #0026ff
         }
+        p:first-letter {
+            color: #4cff00
+        }
     </style>
 
     <h1>Arquivo 1</h1>
